--- a/index.html
+++ b/index.html
@@ -363,14 +363,49 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-dark logo-light">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-wrapper">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-dark logo-light">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials-wrapper">
+          <p class="footer-socials-text">Social media</p>
+          <ul class="socials footer-socials">
+            <li class="socials-item">
+              <a class="socials-link footer-socials-link" href="instagram.com">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials-link" href="x.com">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials-link" href="facebook.com">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials-link" href="linkedin.com">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
