--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
-              <div class="benefits-icon-wrapper">
+              <div class="benefits-thumb">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -81,7 +81,7 @@
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrapper">
+              <div class="benefits-thumb">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
@@ -93,7 +93,7 @@
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrapper">
+              <div class="benefits-thumb">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
@@ -105,7 +105,7 @@
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrapper">
+              <div class="benefits-thumb">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
@@ -297,60 +297,102 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                width="360"
-                alt="banking app" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  width="360"
+                  alt="banking app" />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                width="360"
-                alt="cashless payment" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  width="360"
+                  alt="cashless payment" />
+                  <div class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
+                  </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                width="360"
-                alt="meditation app" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  width="360"
+                  alt="meditation app" />
+                  <div class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
+                  </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                width="360"
-                alt="taxi service" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  width="360"
+                  alt="taxi service" />
+                  <div class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
+                  </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                width="360"
-                alt="screen illustrations" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  width="360"
+                  alt="screen illustrations" />
+                  <div class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
+                  </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-6.jpg"
-                width="360"
-                alt="online courses" />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio/img-6.jpg"
+                  width="360"
+                  alt="online courses" />
+                  <div class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
+                  </div>
+              </div>
               <div class="description">
                 <h3 class="item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
