--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
                   src="./images/portfolio/img-1.jpg"
                   width="360"
                   alt="banking app" />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Banking App</h3>
@@ -319,11 +319,11 @@
                   src="./images/portfolio/img-2.jpg"
                   width="360"
                   alt="cashless payment" />
-                  <div class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                  </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Cashless Payment</h3>
@@ -336,11 +336,11 @@
                   src="./images/portfolio/img-3.jpg"
                   width="360"
                   alt="meditation app" />
-                  <div class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                  </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Meditation App</h3>
@@ -353,11 +353,11 @@
                   src="./images/portfolio/img-4.jpg"
                   width="360"
                   alt="taxi service" />
-                  <div class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                  </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Taxi Service</h3>
@@ -370,11 +370,11 @@
                   src="./images/portfolio/img-5.jpg"
                   width="360"
                   alt="screen illustrations" />
-                  <div class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                  </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Screen Illustrations</h3>
@@ -387,11 +387,11 @@
                   src="./images/portfolio/img-6.jpg"
                   width="360"
                   alt="online courses" />
-                  <div class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                  </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="description">
                 <h3 class="item-title">Online Courses</h3>
