--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <div class="header container">
+      <div class="header-container container">
         <nav class="nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo-dark">Studio</span></a
